# nanomatch-engine

./: .gitignore  CMakeLists.txt  README.md
include/nanomatch/core/: order_book.hpp  stl_order_book.hpp  types.hpp
include/nanomatch/network/: csv_parser.hpp  itch_parser.hpp  pcap_parser.hpp
include/nanomatch/utils/: mapped_file.hpp  object_pool.hpp  spsc_queue.hpp  tsc.hpp
scripts/: generate_data.py
src/: main.cpp
tests/: benchmark_main.cpp  unit_tests.cpp
